--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,14 @@
     "Malgun Gothic", sans-serif;
 }
 
+a,
+a:hover,
+a:focus,
+a:active {
+  text-decoration: none;
+  color: inherit;
+}
+
 .App {
   width: 100vw;
   height: auto;
@@ -824,7 +832,7 @@ input[id*="answer"]:checked + label + div {
 .CardCollectionImage {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: fill;
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
 }
