--- a/src/App.css
+++ b/src/App.css
@@ -644,16 +644,29 @@ input[id*="answer"]:checked + label + div {
 }
 
 /* CollectionPage */
+.MainBanner {
+  width: 100%;
+  height: 480px;
+  background-color: #f7e3d6;
+  display: flex;
+  justify-content: center;
+  background-size: cover;
+  background-position: center;
+}
+
+.MainBannerImage {
+  width: 100%;
+  height: 100%;
+}
 .UserImageWrap {
   width: 75%;
   height: 100%;
   margin: 226px 0 102px 0;
 }
-
 .CollectionInfoContainer {
   width: 340px;
   height: 80px;
-  margin: -150px 0 40px 240px;
+  margin: -62px 0 40px 240px;
   padding: 30px 40px;
   border-radius: 24px;
   border: solid 1px #e5e5e5;
