--- a/src/App.css
+++ b/src/App.css
@@ -32,16 +32,14 @@ a:active {
 
   display: flex;
   align-items: center;
-  justify-content: center;
 }
-/*height: 92px*/
 .HeaderWrapper {
   width: 100%;
   height: 150px;
 
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
 }
 
 .HeaderLogSearchBarContainer {
@@ -79,7 +77,6 @@ a:active {
   height: 100%;
   background-color: transparent;
   border: none;
-  width: 100%;
   margin: 0px 24px;
   font-size: 16px;
   font-weight: 700;
@@ -109,6 +106,7 @@ a:active {
   height: 56px;
   display: flex;
   align-items: center;
+  margin-right: 40px;
 }
 
 .HeaderButton {
@@ -133,17 +131,7 @@ a:active {
   margin-right: 40px;
 }
 
-.HeaderAvatar {
-  margin-right: 80px;
-  cursor: pointer;
-}
-
-.HiddenHeaderAvatar {
-  margin-right: 80px;
-  visibility: hidden;
-}
-
-/* HeaderDropDown */
+/* HeaderDropDown(Create부분)  */
 input[id*="answer"] {
   display: none;
 }
@@ -207,7 +195,7 @@ input[id*="answer"]:checked + label + div {
 .AccordionMenu {
   position: absolute;
   top: 110px;
-  right: 310px;
+  right: 350px;
 }
 
 .AccordionCreateitemContainer-1 {
@@ -258,6 +246,120 @@ input[id*="answer"]:checked + label + div {
   text-align: center;
   box-sizing: border-box;
   padding-right: 20px;
+}
+
+.AccordionMenuButton-2 {
+  width: 100%;
+  height: 4.5rem;
+  font-weight: bold;
+  font-size: 18px;
+  padding: 0px;
+  border: none;
+  background-color: transparent;
+  color: #111;
+  white-space: nowrap;
+  text-align: center;
+  box-sizing: border-box;
+  padding-left: 28px;
+}
+
+/* HeaderDropDown(Avatar부분)  */
+input[id*="account"] {
+  display: none;
+}
+
+input[id*="account"]:checked + label span {
+  font-weight: bold;
+  color: #86c500;
+}
+
+input[id*="account"] + label + div {
+  max-height: 0;
+  transition: all 0.35s;
+  overflow: hidden;
+}
+
+input[id*="account"]:checked + label + div {
+  width: 190px;
+  height: 9rem;
+  border: solid 2px #86c500;
+  background-color: #fff;
+  max-height: 9.188rem;
+  box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.32);
+  border-radius: 16px;
+  z-index: 3;
+}
+
+.Accordion {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.AccordionAccountMenu {
+  position: absolute;
+  top: 110px;
+  right: 40px;
+}
+
+.HeaderAvatar {
+  margin-right: 80px;
+  cursor: pointer;
+}
+
+.HiddenHeaderAvatar {
+  margin-right: 80px;
+  visibility: hidden;
+}
+
+.AccordionCreateitemContainer-1 {
+  display: flex;
+  width: 100%;
+  height: 4.5rem;
+}
+.AccordionCreateitemContainer-1:hover {
+  background-color: #c5ff49;
+}
+
+.AccordionCreateitemContainer-2 {
+  display: flex;
+  width: 100%;
+  height: 4.5rem;
+}
+
+.AccordionCreateitemContainer-2:hover {
+  background-color: #c5ff49;
+}
+
+.AccordionCreateitemContainer-1 img {
+  width: 1.75rem;
+  height: 1.75rem;
+  position: relative;
+  top: 22px;
+  left: 40px;
+}
+
+.AccordionCreateitemContainer-2 img {
+  width: 1.75rem;
+  height: 1.75rem;
+  position: relative;
+  top: 22px;
+  left: 40px;
+}
+
+.AccordionMenuAccountButton-1 {
+  width: 100%;
+  height: 4.5rem;
+  font-weight: bold;
+  font-size: 18px;
+  padding: 0px;
+  border: none;
+  background-color: transparent;
+  color: #111;
+  white-space: nowrap;
+  text-align: center;
+  box-sizing: border-box;
+  padding-right: 10px;
 }
 
 .AccordionMenuButton-2 {
@@ -2385,20 +2487,168 @@ input[id*="CheckBox"] + label + div {
   color: #fff;
 }
 
-/* 무한스크롤 */
-/* .CardWrapperInfinite {
-  display: flex;
+/* MyAccountPage */
+.MyAccountPageContainer {
   width: 100%;
-  height: auto;
-  margin: 64px 0 120px;
+  display: flex;
+  justify-content: center;
+  background-color: #f7f7f7;
 }
 
-.CardCollectionContainerInfinite {
-  width: 342px;
-  height: 398px;
+.MyAccountPageWrapper {
+  width: 75%;
+}
+
+.ProfileEditSpan {
+  display: flex;
+  font-weight: bold;
+  font-size: 56px;
+  color: #111;
+  margin-top: 80px;
+}
+
+.MyAccountPageImageIdWrapper {
+  width: 100%;
+  height: 368px;
+  border-radius: 24px;
+  border: solid 1px #e5e5e5;
+  background-color: #fff;
+  margin-top: 40px;
+}
+
+.ProfileImageTitleWrapper {
+  display: flex;
+  margin-left: 40px;
+  margin-top: 56px;
+}
+
+.ProfileImageTitle {
+  font-size: 24px;
+  font-weight: 500;
+  margin-right: 130px;
+}
+
+.EditProfileImageWrapper {
+  width: 152px;
+  height: 152px;
+  border-radius: 200px;
+  background-color: #e5e5e5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.EditProfileImageCircle {
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+  box-sizing: border-box;
+
+  border-radius: 32px;
+  position: relative;
+  right: 55px;
+  top: 100px;
+}
+
+.UserIdwrapper {
+  margin-left: 40px;
+  margin-top: 48px;
+}
+
+.UserIdTitle {
+  width: 260px;
+  font-size: 24px;
+  font-weight: 500;
+  margin-right: 130px;
+}
+
+.UserIdInput {
+  width: 630px;
+  height: 56px;
   border-radius: 16px;
   border: solid 1px #e5e5e5;
-  display: inline-block;
-  margin-right: 1.5rem;
-  margin-bottom: 40px;
-} */
+  padding-left: 16px;
+  box-sizing: border-box;
+  font-size: 18px;
+}
+
+.UserIdInput::placeholder {
+  font-size: 18px;
+  color: #e5e5e5;
+}
+
+.MyAccountPageButtonBundles {
+  width: 100%;
+  margin-top: 40px;
+  justify-content: center;
+  display: flex;
+}
+
+.MyAccountPageCacelButton {
+  width: 356px;
+  height: 56px;
+  background-color: #e9f1d8;
+  border-radius: 16px;
+  border: none;
+  font-size: 18px;
+  font-weight: bold;
+  color: #649300;
+}
+
+.MyAccountPageEditButton {
+  width: 356px;
+  height: 56px;
+  border-radius: 16px;
+  background-color: #c5ff49;
+  margin-left: 8px;
+  border: none;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+/* MyAuctionPage */
+
+.MyAuctionPageContainer {
+  border-top: #e5e5e5 4px solid;
+
+  display: grid;
+  height: 1500px;
+  grid-template-columns: 238px 1fr;
+}
+
+.MyAuctionPageMenuWrapper {
+  height: 1500px;
+  justify-content: center;
+  padding-top: 40px;
+}
+
+.MyAuctionPageMenuTitle_1 {
+  text-align: center;
+  margin-bottom: 24px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #86c500;
+}
+
+.MyAuctionPageMenuTitle_2 {
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+  margin-right: 20px;
+}
+
+.MyAuctionPageContentWrapper {
+  background-color: #e5e5e5;
+  height: 1500px;
+}
+
+.MyAuctionPageContentTitleWrapper {
+  margin-top: 40px;
+  margin-left: 100px;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.MyAuctionPageContentTitleImage {
+  margin-right: 90px;
+}
