edit: routing 재지정

--- a/src/App.css
+++ b/src/App.css
@@ -1935,6 +1935,7 @@ input[id*="account"]:checked + label + div {
   position: relative;
   right: 45px;
   top: 110px;
+  cursor: pointer;
 }
 
 .CreateItemTittleInputContainer {
@@ -2098,6 +2099,7 @@ input[id*="account"]:checked + label + div {
   font-size: 18px;
   font-weight: bold;
   margin-right: 8px;
+  cursor: pointer;
 }
 
 .DeleteBuutton {
@@ -2107,6 +2109,7 @@ input[id*="account"]:checked + label + div {
   color: #fff;
   font-size: 18px;
   font-weight: bold;
+  cursor: pointer;
 }
 
 /* CreateCollectionPage */
