feature: account 컬렉션 무한스크롤 및 디자인 수정, 검색 아이템 무한스크롤

--- a/src/App.css
+++ b/src/App.css
@@ -851,13 +851,33 @@ input[id*="account"]:checked + label + div {
   cursor: pointer;
 }
 
+.ShareCartWrap {
+  display: flex;
+}
+
 .ShareWrap {
   margin-bottom: 10px;
   border: none;
+  margin-right: 1rem;
 }
 
 .ButtonIcon {
   margin-right: 8px;
+}
+
+.CartCircle {
+  width: 42px;
+  height: 42px;
+  border-radius: 24px;
+  background-color: #666;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.CartImg {
+  width: 20px;
+  height: 20px;
 }
 
 .CollectionDescriptionWrapper {
