--- a/src/App.css
+++ b/src/App.css
@@ -737,19 +737,22 @@ input[id*="account"]:checked + label + div {
   align-items: center;
 }
 .SearchFailedWrapper {
-  margin-top: 200px;
-  margin-left: 100px;
+  text-align: center;
 }
 
 .SearchFailed {
   width: 180px;
   height: 180px;
+  margin-top: 200px;
+  margin-left: 200px;
+  margin-right: 200px;
 }
 
 .SearchFailedText {
-  margin-top: 55px;
-  position: relative;
-  right: 120px;
+  display: flex;
+  margin-top: 30px;
+  margin-left: 3rem;
+
   font-size: 24px;
   font-weight: bold;
 }
