--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ button {
 }
 
 .App {
-  width: 100vw;
+  width: 1920px;
   height: auto;
   font-stretch: normal;
   font-style: normal;
@@ -29,6 +29,37 @@ button {
   padding-bottom: 40px;
 }
 
+/* UserTestButton */
+.UserInfo {
+  position: fixed;
+  height: 40px;
+  width: 40px;
+  bottom: 105px;
+  right: 30px;
+  z-index: 9100;
+  background: url(/src/assets/icon/info.png) no-repeat 50%;
+  background-size: 20px auto;
+  background-color: #fff;
+  border-radius: 50%;
+  padding: 30px;
+  border: 2px solid #e5e5e5;
+}
+
+.UserTest {
+  position: fixed;
+  height: 40px;
+  width: 40px;
+  bottom: 30px;
+  right: 30px;
+  z-index: 9100;
+  background: url(/src/assets/icon/dollar.png) no-repeat 50%;
+  background-size: 20px auto;
+  background-color: #fff;
+  border-radius: 50%;
+  padding: 30px;
+  border: 2px solid #e5e5e5;
+}
+
 /* spinner */
 .Spinner {
   width: 100%;
@@ -36,6 +67,13 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+/* EmptyView */
+.EmptyView {
+  width: 100%;
+  height: 400px;
+  background: url(/src/assets/team/teambackground.png);
 }
 
 /* header */
@@ -426,8 +464,8 @@ input[id*="account"]:checked + label + div {
 /* MainPage */
 .MainContainer {
   width: 100%;
-  /* height: auto; */
-  height: 1000px;
+  height: auto;
+  /* height: 1000px; */
 }
 
 .MainContainer2 {
@@ -868,7 +906,7 @@ input[id*="account"]:checked + label + div {
   font-weight: bold;
   line-height: 1.25;
   text-align: left;
-  color: #666;
+  color: #999999;
 }
 
 .CollectionButtonBundle {
@@ -973,6 +1011,7 @@ input[id*="account"]:checked + label + div {
   border-radius: 16px;
   border: solid 1px #e5e5e5;
   display: inline-block;
+  box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.08);
 }
 
 .CardItemContainer {
@@ -981,6 +1020,7 @@ input[id*="account"]:checked + label + div {
   border-radius: 16px;
   border: solid 1px #e5e5e5;
   display: inline-block;
+  box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.08);
 }
 
 .CardAuctionContainer {
@@ -989,6 +1029,7 @@ input[id*="account"]:checked + label + div {
   border-radius: 16px;
   border: solid 1px #e5e5e5;
   display: inline-block;
+  box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.08);
 }
 
 .CardAuctionContainerMain {
@@ -1196,8 +1237,8 @@ input[id*="account"]:checked + label + div {
 }
 
 .ItemImage {
-  max-width: 100%;
-  max-height: 560px;
+  width: 100%;
+  height: 560px;
   border-radius: 16px;
   object-fit: cover;
 }
