--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,10 @@ button {
   cursor: pointer;
 }
 
+input :focus {
+  outline: none;
+}
+
 .App {
   width: 1920px;
   height: auto;
@@ -464,8 +468,8 @@ input[id*="account"]:checked + label + div {
 /* MainPage */
 .MainContainer {
   width: 100%;
-  height: auto;
-  /* height: 1000px; */
+  /* height: auto; */
+  height: 1000px;
 }
 
 .MainContainer2 {
@@ -1947,7 +1951,6 @@ input[id*="account"]:checked + label + div {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
 }
 
 .ChatUser {
@@ -1968,8 +1971,13 @@ input[id*="account"]:checked + label + div {
   color: #111;
 }
 
-.sent {
-  align-self: flex-end;
+.Received {
+  align-items: flex-start;
+}
+
+.Sent {
+  position: relative;
+  align-items: flex-end;
 }
 
 .Sent .ChatMsg {
@@ -2017,6 +2025,10 @@ input[id*="account"]:checked + label + div {
   font-weight: 500;
 }
 
+.AuctionChattingInput:focus {
+  outline: none;
+}
+
 .UpArrowImg {
   width: 32px;
   height: 32px;
@@ -2027,7 +2039,9 @@ input[id*="account"]:checked + label + div {
   width: 340px;
   height: 600px;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
+  flex-direction: column-reverse;
+  justify-content: flex-end;
   overflow: scroll;
 }
 
@@ -2899,7 +2913,7 @@ input[id*="CheckBox"] + label + div {
   cursor: pointer;
 }
 
-.MyAuctionPageContentContainer {
+.activity-table {
   background-color: #e5e5e5;
 }
 
@@ -3034,49 +3048,6 @@ input[id*="CheckBox"] + label + div {
   margin: 80px 240px 40px 240px;
 }
 
-.MyAuctionPageContentTitleWrapper {
-  width: 75%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 40px;
-  margin-bottom: 16px;
-  font-size: 16px;
-  font-weight: bold;
-  display: flex;
-}
-
-.ContentTitleImage {
-  /* margin-left: 50px; */
-  /* margin-right: 80px; */
-  margin-left: 2.8rem;
-}
-
-.ContentTitleItem {
-  /* margin-left: 10px; */
-  /* flex-grow: 1; */
-  margin-left: 5.5rem;
-}
-
-.ContentTitleAuctionStart {
-  /* flex-grow: 2; */
-  margin-left: 7.3rem;
-}
-
-.ContentTitleAuctionEnd {
-  /* flex-grow: 2; */
-  margin-left: 8.9rem;
-}
-
-.ContentTitleAuctionHighestBid {
-  /* flex-grow: 3; */
-  margin-left: 8.8rem;
-}
-
-.ContentTitleAuctionMyBid {
-  /* flex-grow: 1.2; */
-  margin-left: 25rem;
-}
-
 .AuctionSelectBoxWrapper {
   width: 75%;
   margin: 0 auto;
@@ -3096,133 +3067,92 @@ input[id*="CheckBox"] + label + div {
   display: none;
 }
 
-.MyAuctionPageContentContainer {
-  height: 1066px;
+/* 경매 진행 & 완료 목록 */
+.activity-container {
+  width: 100%;
 }
 
-.MyAuctionPageContentWrapper {
+.activity-table1 {
+  display: flex;
   width: 75%;
-  height: 104px;
+  margin: 2rem 15rem 1rem 15rem;
+  justify-content: center;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.activity-table2 {
+  display: flex;
+  width: 90rem;
+  height: 6.5rem;
+  margin: 0 15rem 1rem 15rem;
+  justify-content: center;
+  font-size: 1.125rem;
+  font-weight: normal;
   border-radius: 16px;
+  border: solid 2px #e5e5e5;
   background-color: #fff;
-  border: 2px solid #e5e5e5;
-  border-radius: 16px;
-  margin-bottom: 16px;
-  margin-left: auto;
-  margin-right: auto;
-
-  display: flex;
   align-items: center;
-  justify-content: space-between;
 }
 
-.MyAuctionPageContentImageWrapper {
+.table1-row {
+  width: 12%;
+  text-align: center;
+}
+
+.act-img {
   width: 56px;
   height: 56px;
-  border-radius: 50%;
-  margin-left: 40px;
-  margin-right: 80px;
+  border-radius: 50px;
   object-fit: cover;
 }
 
-.MyBiddingImage {
-  width: 56px;
-  height: 56px;
-  border-radius: 50%;
-  object-fit: cover;
+#row-title1 {
+  width: 20%;
+  text-align: left;
 }
 
-.ContentItemName {
-  /* flex-grow: 1; */
-  margin-right: 80px;
+#row-title2 {
+  width: 30%;
+  text-align: left;
 }
 
-.ContentAuctionStart {
-  /* flex-grow: 1; */
-  margin-right: 80px;
+#row-title3 {
+  width: 15%;
+  text-align: left;
 }
 
-.ContentAuctionEnd {
-  /* flex-grow: 1; */
-  margin-right: 80px;
+#row-title4 {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  width: 30%;
 }
 
-.ContentHighestBid {
-  /* flex-grow: 3; */
-  margin-right: 25.5%;
-}
-
-.ContentMyBid {
-  width: 200px;
+.activity-btn {
+  width: 240px;
   height: 56px;
   border-radius: 60px;
-  background-color: #c5ff49;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 18px;
   font-weight: bold;
-  margin-right: 40px;
+  border: none;
 }
 
-.ContentMyBidSuccessResult1 {
-  width: 240px;
-  height: 56px;
-  border-radius: 60px;
+#btnA-1 {
   background-color: #f5e1e1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 18px;
-  font-weight: bold;
   color: #b10f0fd3;
-  border: none;
 }
 
-.ContentMyBidSuccessResult2 {
-  width: 240px;
-  height: 56px;
-  border-radius: 60px;
+#btnA-2 {
   background-color: #c5ff49;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 18px;
-  font-weight: bold;
-  border: none;
 }
 
-.ContentMyBidFailureResult {
-  width: 240px;
-  height: 56px;
-  border-radius: 60px;
+#btnA-3 {
   background-color: #e5e5e5;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 18px;
-  font-weight: bold;
   color: #666;
-}
-
-.ContentTitleAuctionWinningBid {
-  margin-left: 9rem;
-}
-
-.ContentTitleAuctionWinningBid {
-  margin-right: 9rem;
-}
-
-.ContentTitleAuctionMyFinalBid {
-  margin-right: 12rem;
-}
-
-.ContentWinningBid {
-  margin-right: 10.5rem;
-}
-
-.ContentMyBidding {
-  margin-right: 5rem;
 }
 
 .MyActivityCardWrapper {
