design: 컬렉션 페이지 컨테이너 최소 높이 추가

--- a/src/App.css
+++ b/src/App.css
@@ -846,6 +846,13 @@ input[id*="account"]:checked + label + div {
 }
 
 /* CollectionPage */
+.CollectionContainer {
+  width: 100%;
+
+  min-height: 1500px;
+  box-sizing: border-box;
+}
+
 .MainBanner {
   width: 100%;
   height: 480px;
