design: CSS수정 및 유효성검사 #포함

--- a/src/App.css
+++ b/src/App.css
@@ -1152,6 +1152,7 @@ input[id*="account"]:checked + label + div {
   width: auto;
   height: auto;
   margin-top: 16px;
+  margin-bottom: 8px;
   font-size: 24px;
   font-weight: bold;
   line-height: 1.25;
