--- a/src/App.css
+++ b/src/App.css
@@ -86,12 +86,21 @@ input :focus {
 }
 
 /* spinner */
-.Spinner {
+.Spinner1 {
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.Spinner2 {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 /* EmptyView */
