--- a/src/App.css
+++ b/src/App.css
@@ -60,12 +60,24 @@ input :focus {
 }
 
 .mobile-page {
+  width: 100%;
+  height: 100vh;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
+}
+
+.mobile-logo {
+  width: 80%;
+  height: 20%;
+  margin-bottom: 2rem;
+  border-radius: 2rem;
 }
 .mobile-text {
   font-size: bold;
   text-align: center;
+  margin-bottom: 0.25rem;
 }
 .link-copy-button {
   width: 15.375rem;
@@ -75,6 +87,13 @@ input :focus {
   text-align: center;
   display: flex;
   justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  background-color: #111;
+  color: #fff;
+  font-size: 1.125rem;
+  border: none;
 }
 
 /* UserTestButton */
